Closed Bug 1512625 Opened 6 years ago Closed 5 years ago

[Content Blocking] The "Allow on any site" functionality from the Permissions Doorhanger prompt does not Work

Categories

(Firefox :: Protections UI, defect, P1)

65 Branch
Desktop
Unspecified
defect

Tracking

()

VERIFIED FIXED
Firefox 66
Tracking Status
firefox63 --- unaffected
firefox64 --- unaffected
firefox65 --- verified
firefox66 --- verified

People

(Reporter: rdoghi, Assigned: ehsan.akhgari)

References

Details

(Whiteboard: [privacy65])

Attachments

(1 file)

[Affected versions]
Firefox 65.0a1

[Affected platforms]
Ubuntu 16.04, Windows 7/10, Mac OS 10.13

[Steps to reproduce]
1. Open the Firefox browser and Set the following preferences in about:config
* Make sure dom.storage_access.enabled is TRUE (default in Nightly)
* Make sure urlclassifier.trackingAnnotationTable.testEntries is set to "storage-access.englehardt-tracker.com,imminent-archeology.glitch.me".
* Make sure network.cookie.cookieBehavior is 4 (default in Nightly)
* Make sure dom.storage_access.auto_grants is FALSE 

2. Reach https://storage-access.englehardt-tracker.com/index.html and Click anywhere on the page.
3. Reach https://imminent-archeology.glitch.me/ and Click anywhere on the page.
4. Reach https://senglehardt.com/test/storage_access/ and click the "call document.requestStorageAccess".
5. Click the "Allow on Any site" button from the Permissions Prompt.
6. Reach https://ehsanakhgari.org/test/storage_access/ and click the "Set and Get cookie via document.cookie"



[Expected result]
Since its the same Tracker and it has been allowed on any site, the user should be able to Set and get Cookies on both https://ehsanakhgari.org/test/storage_access/ , https://senglehardt.com/test/storage_access/ 

[Actual result]
The same tracker and cookie are not allowed on other websites after the user selects the "Allow on any site" from the Permissions Doorhanger panel.
Ehsan, can you please take a look at this? Thank you!
Flags: needinfo?(ehsan)
Whiteboard: [privacy65][triage]
Ugh, this used to work...  Will take a look, looks like the "cookie" permission isn't set for some reason.
Assignee: nobody → ehsan
Flags: needinfo?(ehsan)
Priority: -- → P1
Version: Trunk → 65 Branch
Looks like I messed up the rebase in bug 1490811.  Thanks to C++, the compiler doesn't catch you when you implicitly convert bool to int.  :-(  Thanks to a bug in my test, the impact of that issue wasn't caught by the automated test we had here.
Blocks: 1490811, 1513021
Whiteboard: [privacy65][triage] → [privacy65]
Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4d0d7d9d7ef8
Ensure that the allow-mode argument in the PContent::FirstPartyStorageAccessGrantedForOrigin() IPC call doesn't get converted down to 0/1 r=baku
Comment on attachment 9031227 [details]
Bug 1512625 - Ensure that the allow-mode argument in the PContent::FirstPartyStorageAccessGrantedForOrigin() IPC call doesn't get converted down to 0/1

[Beta/Release Uplift Approval Request]

Feature/Bug causing the regression: Bug 1490811

User impact if declined: See comment 0

Is this code covered by automated tests?: Yes

Has the fix been verified in Nightly?: No

Needs manual test from QE?: No

If yes, steps to reproduce: 

List of other uplifts needed: None

Risk to taking this patch: Low

Why is the change risky/not risky? (and alternatives if risky): Pretty low risk.  This is fixing a minor issue introduced when rebasing the final versions of the patch in bug 1490811 right before it landed.

String changes made/needed: None
Attachment #9031227 - Flags: approval-mozilla-beta?
https://hg.mozilla.org/mozilla-central/rev/4d0d7d9d7ef8
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 66
Hi, I checked this issue in Firefox Nightly 66.0a1 (2018-12-18) from  https://tools.taskcluster.net/index/gecko.v2.mozilla-central.latest.firefox/win64-opt and I can confirm this issue as Fixed.
Flags: qe-verify+
Comment on attachment 9031227 [details]
Bug 1512625 - Ensure that the allow-mode argument in the PContent::FirstPartyStorageAccessGrantedForOrigin() IPC call doesn't get converted down to 0/1

Fix for an issue with Content Blocking, verified in Nightly.
Let's uplift for 65 beta 6.
Attachment #9031227 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Hi, I can confirm this issue Verified as Fixed in Beta 65.0b6 (https://tools.taskcluster.net/index/gecko.v2.mozilla-beta.latest.firefox/win64-opt). I will mark this accordingly.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: