Bug 1512625 - Ensure that the allow-mode argument in the PContent::FirstPartyStorageAccessGrantedForOrigin() IPC call doesn't get converted down to 0/1. r=baku, a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D14478

--HG--
extra : source : 4d0d7d9d7ef84fa5a91c5ab1fa11a401d2255fba